# STATISTICAL-ARBITRAGE

./: .env.example  .gitignore  README.md  improved_quant_research_system_prompt.md  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/quant-research-architecture/: .config.kiro  design.md  requirements.md  tasks.md
alembic/: alembic.ini  env.py
alembic/versions/: 0001_backtest_reproducibility_manifest.py  0002_backtest_and_residual_provenance.py  0003_stability_diagnostics.py
docs/: agents.md  architecture.md  data.md  data_sources.md  deferred_work_checklist.md  examples.md  legal_disclaimer.md  mvp_acceptance.md  repository_structure.md  runtime_maintenance.md  rust_strategy.md  schema.md  technical_debt.md
docs/audits/: 2026-06-04_pre_backtest_audit.md  2026-06-07_tasks_1_9_baseline_acceptance.md  2026-06-07_tasks_8_10_checkpoint_audit.md
docs/knowledge/: agent_memory_contracts.md  decisions.md  decisions_backtesting.md  decisions_coordinator_agent.md  decisions_critic_agent.md  decisions_dashboard.md  decisions_data_pipeline.md  decisions_data_transforms.md  decisions_expert_review_hardening.md  decisions_failure_handling.md  decisions_future_paper_live.md  decisions_hypothesis_agent.md  decisions_infra_ci_secrets.md  decisions_memory_aperag.md  decisions_memory_lightrag.md  decisions_multi_asset_roadmap.md  decisions_reporting.md  decisions_statistical_testing.md  future_ideas.md  mvp_scope_and_constraints.md  research_workflow_contracts.md  safety_testing_and_acceptance.md  technical_debt_backlog.md
docs/knowledge_graph/: index.html
docs/superpowers/plans/: 2026-06-14-task-19-readiness-tail-closure.md
infra/free_deepseek/: Dockerfile  docker-compose.yml
infra/free_qwen/: Dockerfile  docker-compose.yml
infra/infisical/: .env.example  docker-compose.yml
scripts/: benchmark_free_deepseek_models.ps1  benchmark_lightrag_omniroute.ps1  check.ps1  check_agents_checkpoint.ps1  check_aperag.ps1  check_aperag_agent_memory.ps1  check_aperag_answer_eval.ps1  check_aperag_graph_export.ps1  check_aperag_graph_smoke.ps1  check_aperag_knowledge.ps1  check_aperag_memory_fresh.ps1  check_asset_adjustment_policy.ps1  check_backtest_agent_boundaries.ps1  check_backtest_pipeline.ps1  check_backtest_workflow.ps1  check_cli_pipeline.ps1  check_cli_scripted_workflows.ps1  check_coordinator_agent_boundaries.ps1  check_coordinator_pipeline.ps1  check_cost_realism_pipeline.ps1  check_critic_agent_boundaries.ps1  check_critic_pipeline.ps1  check_dashboard_structure.ps1  check_data_pipeline.ps1  check_deferred_work_checklist.ps1  check_docs_links.ps1  check_failure_handling_pipeline.ps1  check_free_deepseek.ps1  check_free_qwen.ps1  check_hypothesis_agent_boundaries.ps1  check_hypothesis_pipeline.ps1  check_infisical.ps1  check_infisical_auth.ps1  check_lightrag_graph_export.ps1  check_lightrag_memory_fresh.ps1  check_live_market_data_acceptance.ps1  check_memory_agent_pipeline.ps1  check_memory_backend.ps1  check_memory_contracts.ps1  check_memory_health.ps1  (+63 more)
src/stat_arb/: __init__.py
src/stat_arb/agents/: __init__.py  audit.py  backtest.py  coordinator.py  critic.py  failure_handling.py  hypothesis.py  report.py  statistical_testing.py
src/stat_arb/backtest/: __init__.py  baseline.py  core.py  costs.py  metrics.py  realism.py  reproducibility.py  sensitivity.py  walk_forward.py
src/stat_arb/cli/: __init__.py  main.py  stage_payloads.py  stage_support.py
src/stat_arb/dashboard/: __init__.py  app.py  data.py  presentation.py
src/stat_arb/data_quality/: __init__.py  alignment.py  ohlcv.py  (+1 more)
tests/integration/: test_agents_checkpoint_integration.py  test_cli_scripted_workflows.py  test_coordinator_agent_integration.py  test_memory_agent_service_integration.py  test_reproducibility_workflow.py
tests/property/: test_backtest_core_properties.py
tests/unit/: test_agent_audit.py  test_aperag_client.py  test_aperag_graph_viewer.py  test_backtest_agent.py  test_backtest_baseline.py  test_backtest_core.py  test_backtest_costs.py  test_backtest_metrics.py  test_backtest_realism.py  test_backtest_report_generation.py  test_backtest_reproducibility.py  test_backtest_sensitivity.py  test_backtest_walk_forward.py  test_backtest_workflow.py  test_benchmark_free_deepseek_models.py  test_benchmark_lightrag_omniroute.py  test_ccxt_source.py  test_check_agents_checkpoint.py  test_check_aperag_answer_eval.py  test_check_aperag_knowledge.py  test_check_aperag_memory_fresh.py  test_check_asset_adjustment_policy.py  test_check_backtest_pipeline.py  test_check_cli_pipeline.py  test_check_coordinator_pipeline.py  test_check_cost_realism_pipeline.py  test_check_critic_pipeline.py  test_check_data_pipeline.py  test_check_docs_links.py  test_check_failure_handling_pipeline.py  test_check_hypothesis_agent_boundaries.py  test_check_hypothesis_pipeline.py  test_check_infisical_auth.py  test_check_lightrag_doc_status.py  test_check_lightrag_memory_fresh.py  test_check_memory_agent_pipeline.py  test_check_memory_backend.py  test_check_memory_contracts.py  test_check_memory_health.py  test_check_memory_quality.py  (+76 more)
(+51 files in other folders)
