[project]
name = "statistical-arbitrage"
version = "0.1.0"
description = "Multi-agent quantitative research system for statistical arbitrage and pairs trading"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Cryptotehnolog", email = "your.email@example.com" }
]
keywords = ["quantitative", "trading", "statistical-arbitrage", "pairs-trading", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core dependencies
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Data handling
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",  # For Parquet support
    
    # Data sources
    "ccxt>=4.2.0",  # Cryptocurrency exchange data
    "yfinance>=0.2.35",  # Fallback for equities (limited intraday)
    
    # Statistical analysis
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",  # Database migrations
    
    # LightRAG and vector store
    "lightrag-hku>=0.0.0.2.2.1",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",  # Embedded vector store
    "chromadb>=0.4.22",  # Alternative embedded vector store
    
    # Secrets management
    # Note: infisical Python SDK is not compatible with Pydantic v2
    # Use Infisical CLI or REST API directly for secrets management
    # "infisical>=1.6.0",  # Incompatible with pydantic>=2.0
    
    # CLI and utilities
    "click>=8.1.0",
    "rich>=13.7.0",  # Beautiful terminal output
    "python-dotenv>=1.0.0",
    
    # Dashboard
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    
    # API (optional for future)
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    
    # Logging and monitoring
    "structlog>=24.1.0",
    
    # HTTP requests
    "httpx>=0.26.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.98.0",  # Property-based testing
    
    # Linting and formatting
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    
    # Type stubs
    "pandas-stubs>=2.1.0",
    "types-requests>=2.31.0",
]

rust = [
    # Rust integration (optional optimization path)
    "maturin>=1.4.0",  # For building Rust extensions
]

[project.scripts]
stat-arb = "stat_arb.cli:main"

[project.urls]
Homepage = "https://github.com/Cryptotehnolog/STATISTICAL-ARBITRAGE"
Repository = "https://github.com/Cryptotehnolog/STATISTICAL-ARBITRAGE"
Issues = "https://github.com/Cryptotehnolog/STATISTICAL-ARBITRAGE/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stat_arb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=stat_arb",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "property: Property-based tests",
    "slow: Slow tests (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without explicit strict parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/*" = ["ARG", "S101"]  # Allow unused arguments and asserts in tests

[tool.ruff.lint.isort]
known-first-party = ["stat_arb"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
